Fix a link in the index.html of the documentation

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section>
         <h2>Related Repositories</h2>
         <ul>
-            <li><a href="https://github.com/velto-framework/runtime/velto.js">Velto Runtime script</a></li>
+            <li><a href="https://velto-framework.github.io/runtime/velto.js">Velto Runtime script</a></li>
             <li><a href="https://github.com/velto-framework/examples">Velto Examples</a></li>
         </ul>
     </section>
